--- a/yaml/systems-thinking-introduction.yaml
+++ b/yaml/systems-thinking-introduction.yaml
@@ -1,5 +1,6 @@
 course_id: systems-thinking-introduction
 course_name: Введение в системное мышление
+course_name_en: Systems Thinking Introduction
 version: 2025-03-16T0959
 version_id: '501'
 sections:
