chore: rename ontologics-sobr.yaml to rational-work.yaml

--- a/yaml/rational-work.yaml
+++ b/yaml/rational-work.yaml
@@ -1,4 +1,4 @@
-course_id: ontologics-sobr
+course_id: rational-work
 course_name: 1. Рациональная работа
 version: 2025-05-15T1900
 version_id: '550'
