--- a/yaml/personality-engineering.yaml
+++ b/yaml/personality-engineering.yaml
@@ -231,7 +231,7 @@ sections:
     slug: flipped-classroom
     section_id: 16506
   - type: TEXT
-    title_ru: жизненное мастерство 
+    title_ru: Mastery Learning
     title_en: Mastery Learning
     slug: mastery-learning
     section_id: 16507
