feat: add original name

--- a/yaml/systems-based-fitness.yaml
+++ b/yaml/systems-based-fitness.yaml
@@ -1,4 +1,5 @@
 course_id: systems-based-fitness
+original_course_id: sf
 course_name: 4. Системный фитнес (пререлиз)
 version: 2024-04-17T1425
 version_id: '254'
