--- a/yaml/systems-engineering.yaml
+++ b/yaml/systems-engineering.yaml
@@ -1,4 +1,5 @@
 course_id: systems-engineering
+original_course_id: systems-engineering
 course_name: 4. Системная инженерия
 version: 2025-05-27T1549
 version_id: '560'
