--- a/yaml/systems-management.yaml
+++ b/yaml/systems-management.yaml
@@ -1,4 +1,5 @@
 course_id: systems-management
+original_course_id: systems-management
 course_name: 6. Системный менеджмент
 version: '2023-05-17'
 version_id: '132'
