--- a/yaml/systems-thinking-introduction.yaml
+++ b/yaml/systems-thinking-introduction.yaml
@@ -1,4 +1,5 @@
 course_id: systems-thinking-introduction
+original_course_id: systems-thinking-intro-2022
 course_name: 3. Введение в системное мышление
 version: 2025-06-09T1050
 version_id: '563'
