--- a/yaml/systems-thinking.yaml
+++ b/yaml/systems-thinking.yaml
@@ -1,4 +1,5 @@
 course_id: systems-thinking
+original_course_id: practical-systems-thinking
 course_name: 2. Cистемное мышление
 version: 2025-05-19T1258
 version_id: '552'
