--- a/yaml/intellect-stack.yaml
+++ b/yaml/intellect-stack.yaml
@@ -1,4 +1,5 @@
 course_id: intellect-stack
+original_course_id: intelligence-stack
 course_name: 7. Интеллект-стек
 version: '2023-07-27'
 version_id: '151'
