--- a/yaml/personality-engineering.yaml
+++ b/yaml/personality-engineering.yaml
@@ -1,4 +1,5 @@
 course_id: personality-engineering
+original_course_id: systems-teaching
 course_name: 5. Инженерия личности
 version: '2023-10-20'
 version_id: '181'
