--- a/yaml/intellect-stack.yaml
+++ b/yaml/intellect-stack.yaml
@@ -71,7 +71,7 @@ sections:
     section_id: 11483
   - type: TEXT
     title_ru: Интеллект и прикладное мастерство неразрывны, мышление и прикладное
-      рассуждение тесно переплетены
+      рассуждение тесто переплетены
     title_en: Intelligence and Applied Mastery Are Inseparable, Thinking and Applied
       Reasoning Are Interwoven
     slug: intelligence-and-applied-mastery-are-inseparable-thinking-and-applied-reasoning-are-interwoven
@@ -505,7 +505,8 @@ sections:
   - type: TEXT
     title_ru: 'Онтология и гомотопическая теория типов: унифицировать всё против найти
       «убойное приложение»'
-    title_en: 'Ontology and Homotopy Type Theory: Unify Everything vs. Finding the Killer Application'
+    title_en: 'Ontology and Homotopy Type Theory: Unify Everything vs. Finding the
+      Killer Application'
     slug: ontology-and-homotopy-type-theory-unify-everything-vs-finding-the-killer-application
     section_id: 11537
   - type: TEXT
